// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckupOutput renders Index-, Node- and ClusterDeprecations with the given deprecations 1`] = `
<div
  className={null}
>
  <IndexDeprecations
    className="kuiVerticalRhythm"
    deprecations={
      Object {
        "index1": Array [],
      }
    }
  />
  <NodeDeprecations
    className="kuiVerticalRhythm"
    deprecations={
      Array [
        Object {
          "level": "warning",
        },
      ]
    }
  />
  <ClusterDeprecations
    className="kuiVerticalRhythm"
    deprecations={
      Array [
        Object {
          "level": "critical",
        },
      ]
    }
  />
</div>
`;

exports[`CheckupOutput renders the className property 1`] = `
<div
  className="myClass"
>
  <IndexDeprecations
    className="kuiVerticalRhythm"
    deprecations={Object {}}
  />
  <NodeDeprecations
    className="kuiVerticalRhythm"
    deprecations={Array []}
  />
  <ClusterDeprecations
    className="kuiVerticalRhythm"
    deprecations={Array []}
  />
</div>
`;
